added searching by city and catching error

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -94,8 +94,8 @@ button {
   font-size: 20px;
   margin-bottom: 20px;
 }
-/* .weather__body {}
-.weather__icon {} */
+/* .weather__body {} */
+/* v */
 
 .weather__temp {
   font-size: 30px;
